--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="radio" name="cambio" id="cinco"><span  class="monedas">Peso Chileno</span>
         <input type="radio" name="cambio" id="seis"><span  class="monedas">Sol</span>
         <p class="textosGuias"><strong>Ingrese monto:</strong></p>
-        <input type="number" id="valor" min="1" max="1000000" required>
+        <input type="number" id="valor" min="1" max="1000000">
         <input type="button" id="cotizador" value="Cotizar" onclick="convertir()">
 
     </form>
